src/ltl2lustre/parsing/ltlParser.java
// Generated from C:\Users\whalen\eclipse-workspace\LTL2Lustre\src\ltl2lustre\parsing\ltl.g4 by ANTLR 4.4

package ltl2lustre.parsing;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ltlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__40=1, T__39=2, T__38=3, T__37=4, T__36=5, T__35=6, T__34=7, T__33=8, 
		T__32=9, T__31=10, T__30=11, T__29=12, T__28=13, T__27=14, T__26=15, T__25=16, 
		T__24=17, T__23=18, T__22=19, T__21=20, T__20=21, T__19=22, T__18=23, 
		T__17=24, T__16=25, T__15=26, T__14=27, T__13=28, T__12=29, T__11=30, 
		T__10=31, T__9=32, T__8=33, T__7=34, T__6=35, T__5=36, T__4=37, T__3=38, 
		T__2=39, T__1=40, T__0=41, REAL=42, BOOL=43, INT=44, ID=45, WS=46, SL_COMMENT=47, 
		ML_COMMENT=48, ERROR=49;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'xnor'", "'T'", "'V'", "'!='", "'X'", "'Z'", "';'", 
		"'>>'", "'<<'", "'='", "'?'", "':='", "'<='", "'&'", "'G'", "'('", "'*'", 
		"','", "'O'", "'->'", "'S'", "'U'", "'LTLSPEC'", "'Y'", "':'", "'mod'", 
		"'>='", "'<'", "'|'", "'>'", "'xor'", "'!'", "'count'", "'next'", "'H'", 
		"')'", "'+'", "'NAME'", "'-'", "'<->'", "REAL", "BOOL", "INT", "ID", "WS", 
		"SL_COMMENT", "ML_COMMENT", "ERROR"
	};
	public static final int
		RULE_program = 0, RULE_ltl_spec = 1, RULE_ltl_expr = 2, RULE_basicexpr = 3, 
		RULE_constant = 4, RULE_intconstant = 5, RULE_realconstant = 6, RULE_boolconstant = 7, 
		RULE_variable_identifier = 8;
	public static final String[] ruleNames = {
		"program", "ltl_spec", "ltl_expr", "basicexpr", "constant", "intconstant", 
		"realconstant", "boolconstant", "variable_identifier"
	};

	@Override
	public String getGrammarFileName() { return "ltl.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ltlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ltlParser.EOF, 0); }
		public Ltl_specContext ltl_spec(int i) {
			return getRuleContext(Ltl_specContext.class,i);
		}
		public List<Ltl_specContext> ltl_spec() {
			return getRuleContexts(Ltl_specContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17) {
				{
				{
				setState(18); ltl_spec();
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(24); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ltl_specContext extends ParserRuleContext {
		public Ltl_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ltl_spec; }
	 
		public Ltl_specContext() { }
		public void copyFrom(Ltl_specContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AnonymousLtlExprContext extends Ltl_specContext {
		public Ltl_exprContext expr;
		public Ltl_exprContext ltl_expr() {
			return getRuleContext(Ltl_exprContext.class,0);
		}
		public AnonymousLtlExprContext(Ltl_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterAnonymousLtlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitAnonymousLtlExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitAnonymousLtlExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NamedLtlExprContext extends Ltl_specContext {
		public Token name;
		public Ltl_exprContext expr;
		public TerminalNode ID() { return getToken(ltlParser.ID, 0); }
		public Ltl_exprContext ltl_expr() {
			return getRuleContext(Ltl_exprContext.class,0);
		}
		public NamedLtlExprContext(Ltl_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterNamedLtlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitNamedLtlExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitNamedLtlExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ltl_specContext ltl_spec() throws RecognitionException {
		Ltl_specContext _localctx = new Ltl_specContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ltl_spec);
		try {
			setState(37);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new AnonymousLtlExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(26); match(T__17);
				setState(27); ((AnonymousLtlExprContext)_localctx).expr = ltl_expr(0);
				setState(28); match(T__33);
				}
				break;
			case 2:
				_localctx = new NamedLtlExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(30); match(T__17);
				setState(31); match(T__2);
				setState(32); ((NamedLtlExprContext)_localctx).name = match(ID);
				setState(33); match(T__28);
				setState(34); ((NamedLtlExprContext)_localctx).expr = ltl_expr(0);
				setState(35); match(T__33);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ltl_exprContext extends ParserRuleContext {
		public Ltl_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ltl_expr; }
	 
		public Ltl_exprContext() { }
		public void copyFrom(Ltl_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BasicLtlExprContext extends Ltl_exprContext {
		public BasicexprContext basicexpr() {
			return getRuleContext(BasicexprContext.class,0);
		}
		public BasicLtlExprContext(Ltl_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterBasicLtlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitBasicLtlExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitBasicLtlExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NestedLtlExprContext extends Ltl_exprContext {
		public Ltl_exprContext ltl_expr() {
			return getRuleContext(Ltl_exprContext.class,0);
		}
		public NestedLtlExprContext(Ltl_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterNestedLtlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitNestedLtlExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitNestedLtlExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnyLtlExprContext extends Ltl_exprContext {
		public Token op;
		public Ltl_exprContext sub;
		public Ltl_exprContext ltl_expr() {
			return getRuleContext(Ltl_exprContext.class,0);
		}
		public UnyLtlExprContext(Ltl_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterUnyLtlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitUnyLtlExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitUnyLtlExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryLtlExprContext extends Ltl_exprContext {
		public Ltl_exprContext lhs;
		public Token op;
		public Ltl_exprContext rhs;
		public List<Ltl_exprContext> ltl_expr() {
			return getRuleContexts(Ltl_exprContext.class);
		}
		public Ltl_exprContext ltl_expr(int i) {
			return getRuleContext(Ltl_exprContext.class,i);
		}
		public BinaryLtlExprContext(Ltl_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterBinaryLtlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitBinaryLtlExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitBinaryLtlExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ltl_exprContext ltl_expr() throws RecognitionException {
		return ltl_expr(0);
	}

	private Ltl_exprContext ltl_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Ltl_exprContext _localctx = new Ltl_exprContext(_ctx, _parentState);
		Ltl_exprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_ltl_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new UnyLtlExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(40);
				((UnyLtlExprContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__35) | (1L << T__34) | (1L << T__25) | (1L << T__21) | (1L << T__16) | (1L << T__8) | (1L << T__5))) != 0)) ) {
					((UnyLtlExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(41); ((UnyLtlExprContext)_localctx).sub = ltl_expr(8);
				}
				break;
			case 2:
				{
				_localctx = new BasicLtlExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(42); basicexpr(0);
				}
				break;
			case 3:
				{
				_localctx = new NestedLtlExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(43); match(T__24);
				setState(44); ltl_expr(0);
				setState(45); match(T__4);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(64);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new BinaryLtlExprContext(new Ltl_exprContext(_parentctx, _parentState));
						((BinaryLtlExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_ltl_expr);
						setState(49);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(50);
						((BinaryLtlExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__38) | (1L << T__37) | (1L << T__19) | (1L << T__18))) != 0)) ) {
							((BinaryLtlExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(51); ((BinaryLtlExprContext)_localctx).rhs = ltl_expr(8);
						}
						break;
					case 2:
						{
						_localctx = new BinaryLtlExprContext(new Ltl_exprContext(_parentctx, _parentState));
						((BinaryLtlExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_ltl_expr);
						setState(52);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(53); ((BinaryLtlExprContext)_localctx).op = match(T__26);
						setState(54); ((BinaryLtlExprContext)_localctx).rhs = ltl_expr(7);
						}
						break;
					case 3:
						{
						_localctx = new BinaryLtlExprContext(new Ltl_exprContext(_parentctx, _parentState));
						((BinaryLtlExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_ltl_expr);
						setState(55);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(56);
						((BinaryLtlExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__39) | (1L << T__11) | (1L << T__9))) != 0)) ) {
							((BinaryLtlExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(57); ((BinaryLtlExprContext)_localctx).rhs = ltl_expr(6);
						}
						break;
					case 4:
						{
						_localctx = new BinaryLtlExprContext(new Ltl_exprContext(_parentctx, _parentState));
						((BinaryLtlExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_ltl_expr);
						setState(58);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(59); ((BinaryLtlExprContext)_localctx).op = match(T__20);
						setState(60); ((BinaryLtlExprContext)_localctx).rhs = ltl_expr(4);
						}
						break;
					case 5:
						{
						_localctx = new BinaryLtlExprContext(new Ltl_exprContext(_parentctx, _parentState));
						((BinaryLtlExprContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_ltl_expr);
						setState(61);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(62); ((BinaryLtlExprContext)_localctx).op = match(T__0);
						setState(63); ((BinaryLtlExprContext)_localctx).rhs = ltl_expr(4);
						}
						break;
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BasicexprContext extends ParserRuleContext {
		public BasicexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicexpr; }
	 
		public BasicexprContext() { }
		public void copyFrom(BasicexprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NestedExprContext extends BasicexprContext {
		public BasicexprContext basicexpr() {
			return getRuleContext(BasicexprContext.class,0);
		}
		public NestedExprContext(BasicexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterNestedExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitNestedExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitNestedExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfThenElseExprContext extends BasicexprContext {
		public BasicexprContext cond;
		public BasicexprContext thene;
		public BasicexprContext elsee;
		public List<BasicexprContext> basicexpr() {
			return getRuleContexts(BasicexprContext.class);
		}
		public BasicexprContext basicexpr(int i) {
			return getRuleContext(BasicexprContext.class,i);
		}
		public IfThenElseExprContext(BasicexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterIfThenElseExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitIfThenElseExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitIfThenElseExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryExprContext extends BasicexprContext {
		public BasicexprContext lhs;
		public Token op;
		public BasicexprContext rhs;
		public List<BasicexprContext> basicexpr() {
			return getRuleContexts(BasicexprContext.class);
		}
		public BasicexprContext basicexpr(int i) {
			return getRuleContext(BasicexprContext.class,i);
		}
		public BinaryExprContext(BasicexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterBinaryExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitBinaryExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitBinaryExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnyExprContext extends BasicexprContext {
		public Token op;
		public BasicexprContext sub;
		public BasicexprContext basicexpr() {
			return getRuleContext(BasicexprContext.class,0);
		}
		public UnyExprContext(BasicexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterUnyExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitUnyExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitUnyExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConstantExprContext extends BasicexprContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ConstantExprContext(BasicexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterConstantExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitConstantExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitConstantExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdExprContext extends BasicexprContext {
		public Variable_identifierContext variable_identifier() {
			return getRuleContext(Variable_identifierContext.class,0);
		}
		public IdExprContext(BasicexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterIdExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitIdExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitIdExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CountExprContext extends BasicexprContext {
		public BasicexprContext basicexpr;
		public List<BasicexprContext> el = new ArrayList<BasicexprContext>();
		public List<BasicexprContext> basicexpr() {
			return getRuleContexts(BasicexprContext.class);
		}
		public BasicexprContext basicexpr(int i) {
			return getRuleContext(BasicexprContext.class,i);
		}
		public CountExprContext(BasicexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).enterCountExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ltlListener ) ((ltlListener)listener).exitCountExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ltlVisitor ) return ((ltlVisitor<? extends T>)visitor).visitCountExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicexprContext basicexpr() throws RecognitionException {
		return basicexpr(0);
	}

	private BasicexprContext basicexpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BasicexprContext _localctx = new BasicexprContext(_ctx, _parentState);
		BasicexprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_basicexpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			switch (_input.LA(1)) {
			case T__8:
				{
				_localctx = new UnyExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
